# star

./: .gitignore  CMakeLists.txt  README.MD  bench_tpcc.cpp  bench_ycsb.cpp  compile.sh  install_new.sh  metis_test.cpp  metis_test_tpcc.cpp  run.sh  sync_crontab.sh  sync_metis.sh
benchmark/tpcc/: Context.h  Database copy.h  Database.h  Query.h  Storage.h  Transaction.h  Workload.h
benchmark/ycsb/: Context.h  Database.h  Query.h  QueryShift.h  Schema.h  Storage.h  Transaction.h  Workload.h  WorkloadShift.h
brain/: cluster.h  kd_tree.h  query_clusterer.h  workload_cluster.h  workload_forcast.h
brain/modelgen/: LSTM.pb  LSTM.py
brain/selectivity/: augmented_nn.h  selectivity_defaults.h
brain/util/: eigen_util.h  model_util.h  tf_util.h
brain/util/tf_session_entity/: tf_session_entity.h  tf_session_entity_input.h  tf_session_entity_io.h  tf_session_entity_output.h
brain/workload/: base_tf.h  ensemble_model.h  kernel_model.h  linear_model.h  lstm.h  workload_defaults.h
common/: HashMap.h  LockfreeQueue.h  Message.h  MessagePiece.h  MyMove copy.bak  MyMove copy.h  MyMove.h  MyMove.h.old  Percentile.h  PinThreadToCore.h  ShareQueue.h  ShareVector.h  Socket.h  Time.h  WALLogger.h  bitmap.h  cpuStat.h  internal_types.h  macros.h
common/skiplist/: random_access_skip_list.h  skip_list_detail.h
core/: Context.h  ControlMessage.h  Coordinator.h  Defs.h  Delay.h  Dispatcher copy.h  Dispatcher.h  Executor.h  Macros.h  Manager.h  Partitioner.h  RouterValue.h  Table.h  Worker.h
core/factory/: WorkerFactory.h
core/group_commit/: Executor.h  Executor.h.bak  Generator.h  Generator.h.bak  Manager.h  Manager.h.bak
protocol/Aria/: Aria.h  AriaExecutor.h  AriaGenerator.h  AriaHelper.h  AriaManager.h  AriaMessage.h  AriaMeta.h  AriaRWKey.h  AriaTransaction.h
protocol/Calvin/: Calvin.h  CalvinExecutor.h  CalvinGenerator.h  CalvinHelper.h  CalvinManager.h  CalvinMessage.h  CalvinMeta.h  CalvinTransaction.h
protocol/ClaySS/: ClaySS.h  ClaySSExecutor.h  ClaySSGenerator.h  ClaySSGeneratorScale.h  ClaySSManager.h  ClaySSMeitsExecutor.h  ClaySSMessage.h  ClaySSMeta.h  ClaySSMetisGeneratorR copy.h  ClaySSMetisGeneratorR.h  ClaySSRWKey.h  ClaySSTransaction.h
protocol/H-Store/: HStoreExecutor copy.h  HStoreExecutor.h  HStoreExecutorBak.h  HStoreGenerator copy.h  HStoreGenerator.h  HStoreManager.h  HStoreMessage.h  HStoreMeta.h  HStoreTransaction.h
protocol/Hermes/: Hermes.h  HermesExecutor.h  HermesGenerator.h  HermesHelper.h  HermesManager.h  HermesMessage.h  HermesMeta.h  HermesRWKey.h  HermesTransaction.h
protocol/Lion/: Lion.h  LionExecutor.h  LionExecutor.h.bak  LionExecutor_bak.h  LionGenerator copy.h  LionGenerator.h  LionGenerator.h.bak  LionGeneratorScale.h  LionManager.h  LionMessage copy.h.bak  LionMessage copy.h.bakk  LionMessage.h  LionMetisExecutor.h  LionMetisGenerator.h  LionMetisGenerator.h.bbk  LionMetisMessage.h  LionQueryNum.h  LionRWKey.h  LionRecorder.h  LionRecorder.h.bak  LionTransaction.h  lionmessage_bak
protocol/LionNS/: LionNSExecutor copy.h  LionNSExecutor.h  LionNSManager.h
protocol/LionS/: LionSExecutor.h  LionSGenerator.h  LionSManager.h  LionSMessage.h  LionSMeta.h
protocol/LionSS/: LionSS.h  LionSSExecutor copy.h  LionSSExecutor.h  LionSSGenerator.h  LionSSGeneratorScale.h  LionSSManager.h  LionSSMeitsExecutor copy.h  LionSSMeitsExecutor.h  LionSSMessage copy.h  LionSSMessage.h  LionSSMessageBatch.h  LionSSMeta.h  LionSSMetisGenerator.h  LionSSMetisGeneratorR.h  LionSSRWKey.h  LionSSTransaction copy.h  LionSSTransaction.h  LionSSTransaction.h.bak
protocol/MyClay/: MyClay.h  MyClayExecutor.h  MyClayGenerator.h  MyClayManager.h  MyClayMeitsExecutor.h  MyClayMessage.h  MyClayMetisExecutor.h.bak  MyClayMetisGenerator.h  MyClayMetisMessage.h.bak  MyClayRWKey.h  MyClayTransaction.h
protocol/Silo/: Silo.h  SiloExecutor.h  SiloGenerator.h  SiloHelper.h  SiloManager.h  SiloMessage.h  SiloMeta.h  SiloRWKey.h  SiloTransaction.h
protocol/SiloGC/: SiloGC.h  SiloGCExecutor.h  SiloGCGenerator.h  SiloGCManager.h  SiloGCMessage.h  SiloGCMeta.h
protocol/Star/: Star.h  StarExecutor.h  StarGenerator.h  StarManager.h  StarMessage.h  StarQueryNum.h  StarRecorder.h  StarRecorder.h.bak
protocol/TwoPL/: TwoPL.h  TwoPLHelper.h  TwoPLMessage.h  TwoPLTransaction.h
protocol/TwoPLGC/: TwoPLGC.h
scripts/: aws_breakdown.py  aws_model.py  crontab.sh  distribute_script.py  ips.txt  kill_all.sh  remove.sh  run.sh  test.sh
scripts/scale/: distribute_script.py  kill_all.sh  remove.sh  run.sh  s_get_result.bash  test.sh
test/: CMakeLists.txt  Makefile  cmake_install.cmake
test/brain/: augmented_nn_test.cpp  eigen_util_test.cpp  forcast_workload_test.cpp  model_test.cpp  model_util_test.cpp  query_clusterer_test.cpp  query_logger_test.cpp  tensorflow_util_test.cpp  workload_cluster_test.cpp
(+706 files in other folders)
